changed font and media query for the post-card size

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -252,9 +252,8 @@
                 {% endblock %}
 
 
-                <div class="card text-white {% block card_color %} bg-danger {% endblock %} mb-3 wow
-                    {% block animate %}fadeInRight {% endblock %}"
-                     style="max-width: 64%; min-width: 60%; margin: auto; display: block;"
+                <div class="card text-white post-card {% block card_color %} bg-danger {% endblock %} mb-3 wow
+                    {% block animate %}fadeInRight {% endblock %}
                      title="{% block card_title %} Post {% endblock %}">
 
 
