changed it back to png from svg

--- a/templates/wallOf/secret.html
+++ b/templates/wallOf/secret.html
@@ -33,7 +33,7 @@
 
 {% block logo %}
 {#    <a href="{% url 'secretes' %}" title="wall of secretes">#}
-        <img src="{% static  'wall headers/wall of secrets.svg' %}" class="img-fluid" id="title_it"
+        <img src="{% static  'wall headers/wall of secrets.png' %}" class="img-fluid" id="title_it"
              alt="wall of secretes"
              style="min-height: 3rem; max-height: 7rem;" title="shhhhh!!!">
 {#    </a>#}
