not true instead

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -242,6 +242,9 @@
 
 {% for posts in all %}
 
+    {% if posts.RED_FLAG != True %}
+
+
     <div class="row">
         <div class="container-fluid d-flex justify-content-center">
             <div class="col-12 col-xs-12 col-sm-11 col-md-11 col-lg-10 col-xl-11" style="">
@@ -321,6 +324,7 @@
     </div>
 
     <br>
+    {% endif %}
 {% endfor %}
 
 <br>
