figured out joy colors

--- a/templates/wallOf/joy.html
+++ b/templates/wallOf/joy.html
@@ -54,8 +54,7 @@
 {% block card_color %}  {% endblock %}
 
 {% block extra_card_style %} background-color: red{% endblock %}
-
-{#{% block extra_card_style %} background-color: #41FF21{% endblock %}#}
+{#{% block extra_card_style %} background-color: #3ACC00{% endblock %}#}
 
 {% block card_title %} YAY!!!!!!!!!! {% endblock %}
 
