added url to base docs

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -88,6 +88,7 @@
 
     {# fonts #}
     <link href="https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
 
 
     <style>
@@ -183,6 +184,11 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             {#      <a class="nav-item nav-link text-white active" href="#">Home <span class="sr-only">(current)</span></a>#}
+
+            <a class="nav-item nav-link"
+               style="color: #FFF223; font-size: 150%; font-family: 'Staatliches', cursive; letter-spacing: 0.154rem;
+                    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,1px 1px 0 #000;"
+               href="{% url 'frustrations' %}">Walls Of Joys!</a>
 
             <a class="nav-item nav-link"
                style="color: #F15A24; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
