now added joy url

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -188,7 +188,7 @@
             <a class="nav-item nav-link"
                style="color: #FFF223; font-size: 150%; font-family: 'Staatliches', cursive; letter-spacing: 0.154rem;
                     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,1px 1px 0 #000;"
-               href="{% url 'frustrations' %}">Walls Of Joys!</a>
+               href="{% url 'joy' %}">Walls Of Joys!</a>
 
             <a class="nav-item nav-link"
                style="color: #F15A24; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
