changed joy.html to green for optimism

--- a/templates/wallOf/joy.html
+++ b/templates/wallOf/joy.html
@@ -53,8 +53,9 @@
 
 {% block card_color %}  {% endblock %}
 
-{% block extra_card_style %} background-color: red{% endblock %}
+{#{% block extra_card_style %} background-color: red{% endblock %}#}
 {#{% block extra_card_style %} background-color: #3ACC00{% endblock %}#}
+{% block extra_card_style %} background-color: #0FCC0C{% endblock %}
 
 {% block card_title %} YAY!!!!!!!!!! {% endblock %}
 
