--- a/templates/wallOf/joy.html
+++ b/templates/wallOf/joy.html
@@ -1,7 +1,7 @@
 {% extends 'Base_All.html' %}
 {% load static %}
 
-{% block title %}Wall Of Joy {% endblock %}
+{% block title %}Wall Of Joys! {% endblock %}
 
 
 {% block extra_head_at_end %}
