made frustrations page header better logo

--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -35,9 +35,9 @@
 
 {% block logo %}
     {#    <a href="{% url 'frustrations' %}">#}
-    <img src="{% static  'wall headers/wall-of-header.png' %}" class="img-fluid" id="title_it"
+    <img src="{% static  'wall headers/wall-of-frustrations-ai-to-ps.png' %}" class="img-fluid" id="title_it"
          alt="website logo"
-         style="max-height: 9rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
+         style="min-height: 3rem; max-height: 7rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
     {#    </a>#}
 
     {#            <a href="{% url 'frustrations' %}">#}
