added walls of spam

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -264,6 +264,7 @@
                     <div class="card text-white post-card {% block card_color %} {% endblock %} mb-3 wow
                     {% block animate %}fadeInRight {% endblock %}
                      title="{% block card_title %} Post {% endblock %}
+{#                    todo delete the extra color there later#}
                          style="{% block extra_card_style %} background-color: green{% endblock %}; color: ">
 
 
