updated wall of spam

--- a/templates/wallOf/spam.html
+++ b/templates/wallOf/spam.html
@@ -45,9 +45,9 @@
 
 {% block card_color %}  {% endblock %}
 
-{% block extra_card_style %} background-color: #FFEA18 {% endblock %}
+{% block extra_card_style %} background-color: #FFFA00 {% endblock %}
 
-{% block extra_post_style %}color: green {% endblock %}
+{% block extra_post_style %}color: #2F00B3 {% endblock %}
 
 {% block card_title %} dont tell anyone...its a secrete! {% endblock %}
 
