--- a/templates/wallOf/spam.html
+++ b/templates/wallOf/spam.html
@@ -26,8 +26,8 @@
 
 {% block logo %}
     {#    <a href="{% url 'secretes' %}" title="wall of secretes">#}
-    <img src="{% static  'wall headers/wall of secrets.png' %}" class="img-fluid" id="title_it"
-         alt="wall of secretes"
+    <img src="{% static  'wall headers/wall-of-spam.png' %}" class="img-fluid" id="title_it"
+         alt="wall of spam"
          style="min-height: 3rem; max-height: 7rem;" title="spam it up!!!!!!">
     {#    </a>#}
     <br>
