--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -6,7 +6,7 @@
     <title>{% block title %} {% endblock %}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-    <div>
+{#    <div>#}
         {#    faveicons#}
         <link rel="apple-touch-icon-precomposed" sizes="57x57"
               href="{% static 'favicon/apple-touch-icon-57x57.png' %}"/>
@@ -37,7 +37,7 @@
         <meta name="msapplication-square150x150logo" content="mstile-150x150.png"/>
         <meta name="msapplication-wide310x150logo" content="mstile-310x150.png"/>
         <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
-    </div>
+{#    </div>#}
 
     {% comment %}        <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
