--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -6,38 +6,38 @@
     <title>{% block title %} {% endblock %}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-{#    <div>#}
-        {#    faveicons#}
-        <link rel="apple-touch-icon-precomposed" sizes="57x57"
-              href="{% static 'favicon/apple-touch-icon-57x57.png' %}"/>
-        <link rel="apple-touch-icon-precomposed" sizes="114x114"
-              href=" {% static 'favicon/apple-touch-icon-114x114.png' %}"/>
-        <link rel="apple-touch-icon-precomposed" sizes="72x72"
-              href="{% static 'favicon/apple-touch-icon-72x72.png' %}"/>
-        <link rel="apple-touch-icon-precomposed" sizes="144x144"
-              href="{% static 'favicon/apple-touch-icon-144x144.png' %}"/>
-        <link rel="apple-touch-icon-precomposed" sizes="60x60"
-              href="{% static 'favicon/apple-touch-icon-60x60.png' %}"/>
-        <link rel="apple-touch-icon-precomposed" sizes="120x120"
-              href="{% static 'favicon/apple-touch-icon-120x120.png' %} "/>
-        <link rel="apple-touch-icon-precomposed" sizes="76x76"
-              href="{% static 'favicon/apple-touch-icon-76x76.png' %}"/>
-        <link rel="apple-touch-icon-precomposed" sizes="152x152"
-              href="{% static 'favicon/apple-touch-icon-152x152.png' %}"/>
-        <link rel="icon" type="image/png" href="{% static 'favicon/favicon-196x196.png' %}" sizes="196x196"/>
-        <link rel="icon" type="image/png" href="{% static 'favicon/favicon-96x96.png' %}" sizes="96x96"/>
-        <link rel="icon" type="image/png" href="{% static 'favicon/favicon-32x32.png' %}" sizes="32x32"/>
-        <link rel="icon" type="image/png" href="{% static 'favicon/favicon-16x16.png' %}" sizes="16x16"/>
-        <link rel="icon" type="image/png" href="{% static 'favicon/favicon-128.png' %}" sizes="128x128"/>
+    {#    <div>#}
+    {#    faveicons#}
+    <link rel="apple-touch-icon-precomposed" sizes="57x57"
+          href="{% static 'favicon/apple-touch-icon-57x57.png' %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114"
+          href=" {% static 'favicon/apple-touch-icon-114x114.png' %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72"
+          href="{% static 'favicon/apple-touch-icon-72x72.png' %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144"
+          href="{% static 'favicon/apple-touch-icon-144x144.png' %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="60x60"
+          href="{% static 'favicon/apple-touch-icon-60x60.png' %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120"
+          href="{% static 'favicon/apple-touch-icon-120x120.png' %} "/>
+    <link rel="apple-touch-icon-precomposed" sizes="76x76"
+          href="{% static 'favicon/apple-touch-icon-76x76.png' %}"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152"
+          href="{% static 'favicon/apple-touch-icon-152x152.png' %}"/>
+    <link rel="icon" type="image/png" href="{% static 'favicon/favicon-196x196.png' %}" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="{% static 'favicon/favicon-96x96.png' %}" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="{% static 'favicon/favicon-32x32.png' %}" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="{% static 'favicon/favicon-16x16.png' %}" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="{% static 'favicon/favicon-128.png' %}" sizes="128x128"/>
 
-        <meta name="application-name" content="&nbsp;"/>
-        <meta name="msapplication-TileColor" content="#FFFFFF"/>
-        <meta name="msapplication-TileImage" content="mstile-144x144.png"/>
-        <meta name="msapplication-square70x70logo" content="mstile-70x70.png"/>
-        <meta name="msapplication-square150x150logo" content="mstile-150x150.png"/>
-        <meta name="msapplication-wide310x150logo" content="mstile-310x150.png"/>
-        <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
-{#    </div>#}
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="mstile-144x144.png"/>
+    <meta name="msapplication-square70x70logo" content="mstile-70x70.png"/>
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png"/>
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png"/>
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
+    {#    </div>#}
 
     {% comment %}        <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
@@ -57,8 +57,8 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-{#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">#}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    {#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.min.css">#}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -204,7 +204,7 @@
                style="color: #F15A24; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
                href="{% url 'frustrations' %}">Walls Of Frustrations</a>
 
-{% comment %}            <a class="nav-item nav-link "
+            {% comment %}            <a class="nav-item nav-link "
                style="color: #FF05F2; font-size: 150%; font-family:'Londrina Solid', cursive; letter-spacing: 0.154rem;"
                href="{% url 'secrets' %}">Walls Of Secrets</a>{% endcomment %}
 
@@ -279,9 +279,9 @@
                     {% endblock %}
 
 
-                    <div class="card text-white post-card {% block card_color %} {% endblock %} mb-3 wow"
-                    {% block animate %}fadeInRight {% endblock %}
-                     title="{% block card_title %} Post {% endblock %}"
+                    <div class="card text-white post-card {% block card_color %} {% endblock %} mb-3 wow
+                    {% block animate %}fadeInRight {% endblock %}"
+                         title="{% block card_title %} Post {% endblock %}"
                             {#                    todo delete the extra color there later#}
                          style="{% block extra_card_style %}background-color: green{% endblock %};">
 
